Edited EKOprojektas.tex via GitHub

--- a/EKOprojektas.tex
+++ b/EKOprojektas.tex
@@ -83,7 +83,7 @@
 \end{itemize}
 \subsection{Remiantis atliktais keturiais regresiniais skaičiavimais, apibendrinti infliacijos priklausomumo  nuo visų kintamųjų ypatybes bei padaryti ekonomines išvadas;}
 \subsection{	Infliacijos prognozė.}
-\section{Literatūra (sąrašas pildomas):}
+\section{Literatūra (sąrašas nuolat pildomas):}
 \subsection {www.stat.gov.lt;} 
 \subsection{www.lb.lt;}
 \subsection{O. Blanchard  „Makroekonomika“.}
