Plano literaturos papildymas

--- a/EKOprojektas.tex
+++ b/EKOprojektas.tex
@@ -69,4 +69,5 @@
 \subsection {www.stat.gov.lt;} 
 \subsection{www.lb.lt;}
 \subsection{O. Blanchard  „Makroekonomika“.}
+\subsection{http://epp.eurostat.ec.europa.eu/}
 \end{document}
